refactor(java version): change java version to 8+